Latest frontend push from https://github.com/COMP490/Nexus-software.git.

--- a/src/main/resources/public/app/views/login.html
+++ b/src/main/resources/public/app/views/login.html
@@ -27,7 +27,7 @@
         <h1>Welcome to Nexus!</h1>
         <h3>Social &amp; Gaming</h3>
         <br>
-        <a href="#about" class="btn btn-dark btn-lg">Find Out More</a>
+        <!--a href="#services" class="btn btn-dark btn-lg">Find Out More</a-->
     </div>
 </header>
 
@@ -47,10 +47,10 @@
                                 <i class="fa fa-cloud fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Matchmaking</strong>
                             </h4>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Connecting you with other players based on your rank!</p>
                             <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
@@ -61,10 +61,10 @@
                                 <i class="fa fa-compass fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Instant Messaging</strong>
                             </h4>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>Talk to other players instantly!</p>
                             <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
@@ -75,10 +75,10 @@
                                 <i class="fa fa-flask fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Community</strong>
                             </h4>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>A live community where players can have post, talk about, and share strategies about their games.</p>
                             <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
@@ -89,10 +89,10 @@
                                 <i class="fa fa-shield fa-stack-1x text-primary"></i>
                             </span>
                             <h4>
-                                <strong>Service Name</strong>
+                                <strong>Profile</strong>
                             </h4>
 
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                            <p>A page where other players can learn more about you!</p>
                             <a href="#" class="btn btn-light">Learn More</a>
                         </div>
                     </div>
@@ -109,7 +109,7 @@
 <!-- Callout -->
 <aside class="callout">
     <div class="text-vertical-center">
-        <h1>Vertically Centered Text</h1>
+        <h1>Share your knowledge among your peers!</h1>
     </div>
 </aside>
 
@@ -132,40 +132,40 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-10 col-lg-offset-1 text-center">
-                <h2>Our Work</h2>
+                <h2>Games supported</h2>
                 <hr class="small">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="portfolio-item">
-                            <a href="#">
-                                <img class="img-portfolio img-responsive" src="images/portfolio-1.jpg">
+                            <!--a href="#"-->
+                                <img class="img-portfolio img-responsive" src="images/games/lol-logo.jpg">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="portfolio-item">
-                            <a href="#">
-                                <img class="img-portfolio img-responsive" src="images/portfolio-2.jpg">
+                            <!--a href="#"-->
+                                <img class="img-portfolio img-responsive" src="images/games/world-of-warcraft-logo.jpg">
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <!--iv class="col-md-6">
                         <div class="portfolio-item">
                             <a href="#">
                                 <img class="img-portfolio img-responsive" src="images/portfolio-3.jpg">
                             </a>
                         </div>
-                    </div>
-                    <div class="col-md-6">
+                    </div-->
+                    <!--div class="col-md-6">
                         <div class="portfolio-item">
                             <a href="#">
                                 <img class="img-portfolio img-responsive" src="images/portfolio-4.jpg">
                             </a>
                         </div>
-                    </div>
+                    </div-->
                 </div>
                 <!-- /.row (nested) -->
-                <a href="#headTab" class="btn btn-dark">View More Items</a>
+                <a href="#headTab" class="btn btn-dark">View More Games</a>
             </div>
             <!-- /.col-lg-10 -->
         </div>
@@ -179,15 +179,14 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h3>The buttons below are impossible to resist.</h3>
+                <h3>Nexus, safe community of friends and gaming</h3>
                 <!--a href="#" class="btn btn-lg btn-light">Click Me!</a-->
                 <!--a href="#" class="btn btn-lg btn-dark">Look at Me!</-->
             </div>
         </div>
     </div>
 </aside>
-<form ng-show=loginStatus ng-submit="logout()" novalidate>
-    <p>Successfully logged in</p>
+
     <button type="submit" class="button" ng-click="logout()">Logoff</button>
-</form>
+
 
