--- a/src/main/resources/public/styles/styles.css
+++ b/src/main/resources/public/styles/styles.css
@@ -4,12 +4,10 @@
     background-attachment: fixed;
 }
 
-
 html,
 body {
     width: 100%;
     height: 100%;
-
 }
 
 body {
@@ -24,12 +22,15 @@ body {
     height:400px;
     color: black;
 }
-
+.text-vertical-center h3{
+    color: white;
+}
 .text-vertical-center h1 {
     margin: 0;
     padding: 0;
     font-size: 4.5em;
     font-weight: 700;
+    color: #28a4c9;
 }
 
 /* Custom Button Styles */
@@ -157,7 +158,7 @@ hr.small {
     position: relative;
     width: 100%;
     height: 100%;
-    background: url(../images/bg.jpg) no-repeat center center scroll;
+    background: url(../images/space-bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -186,8 +187,8 @@ hr.small {
     display: table;
     width: 100%;
     height: 400px;
-    color: #fff;
-    background: url(../images/callout.jpg) no-repeat center center scroll;
+    color: #31708f;
+    background: url(../images/community-bg.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -249,3 +250,19 @@ footer {
   border-color : #000000
 
 }
+/* profile css */
+#userProfile{
+    color: black;
+}
+
+#userProfile h1{
+    color:white;
+}
+
+#profilePicSize,
+#friendPicSize{
+    height: 250px;
+}
+#logoff{ margin-left: 10px;
+}
+
