--- a/src/main/resources/public/app/views/profile.html
+++ b/src/main/resources/public/app/views/profile.html
@@ -2,120 +2,131 @@
     <div class="row">
         <div class="col-xs-10 col-sm-10">
             <h1 class="">{{ profile.userName }}</h1>
-
-            <button type="button" class="btn btn-success">Friend Me!</button>
-            <button type="button" class="btn btn-info">Send me a message</button>
-            <br>
         </div>
-        <div class="col-xs-2 col-sm-2"><a href="/users" class="pull-right">
+        <div class="col-xs-2 col-sm-2"><a href="" class="pull-right">
             <img id="profilePicSize" title="profile image"
                  class="img-square img-responsive"
                  src="images/{{ profile.profilePic }}"></a>
-              <button type="button" class="btn btn-default" ng-click="open()">Edit</button>
         </div>
-    </div>
-    <br>
-
-    <div class="row">
-        <div class="col-xs-3 col-sm-3">
-            <!--left col-->
-            <ul class="list-group">
-                <li class="list-group-item text-muted" contenteditable="false">Profile</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Joined</strong></span>
-                    {{ profile.join }}
-                </li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Last
-                    seen</strong></span> {{ profile.lastSeen }}
-                </li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Real
-                    name</strong></span> {{ profile.realName }}
-                </li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Level: </strong></span>
-                    {{ profile.forumLvl }}
-
-                </li>
-            </ul>
-            <div class="panel panel-default">
-                <div class="panel-heading">Favorite Games
-                </div>
-                <div class="panel-body"><i style="color:green" class="fa fa-check-square"></i>
-                    {{profile.favGame}}
-
-                </div>
-            </div>
-            <ul class="list-group">
-                <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i>
-
-                </li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Shares</strong></span>
-                    {{ profile.shares }}
-                </li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Likes</strong></span> {{
-                    profile.likes }}
-                </li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong class="">Posts</strong></span> {{
-                    profile.posts }}
-                </li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong
-                        class="">Followers</strong></span> {{ profile.followers }}
-                </li>
-            </ul>
-            <div class="panel panel-default">
-                <div class="panel-heading">Social Media</div>
-                <div ng-repeat="website in links " class="panel-body"><a ng-href="{{website.socialLinks}}">
-                    <p>{{ website.websiteName }}</p></a></div>
+        <div class="row">
+            <div class="col-xs-6 col-sm-6">
+                <button type="button" class="btn btn-success" ng-click="open()">Friend Me!</button>
+                <button type="button" class="btn btn-info" ng-click="open()">Send me a message</button>
+                <br>
             </div>
         </div>
-        <!--/col-3-->
-        <div class="col-xs-9 col-sm-9" contenteditable="false" style="">
-            <div class="panel panel-default">
-                <div class="panel-heading">About {{ profile.userName }}</div>
-                <div class="panel-body"><p>{{ profile.description }}</p>
+        <div class="row ">
+            <div class="pull-left col-xs-2 col-sm-2">
+                <button type="button" class="btn btn-dark btn-lg" ng-click="open()">Main</button>
+                <button type="button" class="btn btn-dark btn-lg" ng-click="open()">Info</button>
+            </div>
+        </div>
+        <br>
 
+        <div class="row">
+            <div class="col-xs-3 col-sm-3">
+                <!--left col-->
+                <ul class="list-group">
+                    <li class="list-group-item text-muted" contenteditable="false">Profile</li>
+                    <li class="list-group-item text-right"><span class="pull-left"><strong
+                            class="">Joined</strong></span>
+                        {{ profile.join }}
+                    </li>
+                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">Last
+                        seen</strong></span> {{ profile.lastSeen }}
+                    </li>
+                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">Real
+                        name</strong></span> {{ profile.realName }}
+                    </li>
+                    <li class="list-group-item text-right"><span class="pull-left"><strong
+                            class="">Level: </strong></span>
+                        {{ profile.forumLvl }}
+
+                    </li>
+                </ul>
+                <div class="panel panel-default">
+                    <div class="panel-heading">Current Games
+                    </div>
+                    <div class="panel-body" ng-repeat="currGame in gamePlay"><i style="color:green"
+                                                                                class="fa fa-check-square"></i>
+                        <a href="{{currGame.gameLinks}}"> {{currGame.gameName}}</a>
+
+                    </div>
+                </div>
+                <ul class="list-group">
+                    <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i>
+
+                    </li>
+                    <!--li class="list-group-item text-right"><span class="pull-left"><strong class="">Shares</strong></span>
+                        {{ profile.shares }}
+                    </li>
+                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">Likes</strong></span> {{
+                        profile.likes }}
+                    </li-->
+                    <li class="list-group-item text-right"><span class="pull-left"><strong
+                            class="">Posts</strong></span> {{
+                        profile.posts }}
+                    </li>
+                    <!--li class="list-group-item text-right"><span class="pull-left"><strong
+                            class="">Followers</strong></span> {{ profile.followers }}
+                    </li-->
+                </ul>
+                <div class="panel panel-default">
+                    <div class="panel-heading">Social Media</div>
+                    <div ng-repeat="website in links " class="panel-body"><a ng-href="{{website.socialLinks}}">
+                        <p>{{ website.websiteName }}</p></a></div>
                 </div>
             </div>
-            <div class="panel panel-default target">
-                <div class="panel-heading" contenteditable="false">Games Currently Playing</div>
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-xs-4 col-md-4" ng-repeat="gamePlay in gamePlay">
-                            <div class="thumbnail">
-                                <a ng-href="{{ gamePlay.gameForum }}">
-                                <img width="272" height="150" src="images/{{gamePlay.gamePic}}"></a>
+            <!--/col-3-->
+            <div class="col-xs-9 col-sm-9" contenteditable="false" style="">
+                <div class="panel panel-default">
+                    <div class="panel-heading">About {{ profile.userName }}</div>
+                    <div class="panel-body"><p>{{ profile.description }}</p>
 
-                                <div class="caption">
-                                    <h3>
-                                        {{ gamePlay.gameName }}
-                                    </h3>
+                    </div>
+                </div>
+                <!--div class="panel panel-default target">
+                    <div class="panel-heading" contenteditable="false">Games Currently Playing</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4 col-md-4" ng-repeat="gamePlay in gamePlay">
+                                <div class="thumbnail">
+                                    <a ng-href="{{ gamePlay.gameForum }}">
+                                    <img width="272" height="150" src="images/{{gamePlay.gamePic}}"></a>
+
+                                    <div class="caption">
+                                        <h3>
+                                            {{ gamePlay.gameName }}
+                                        </h3>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </--div-->
+                <div class="panel panel-default target">
+                    <div class="panel-heading" contenteditable="false">Friends</div>
+                    <div class="panel-body">
+                        <div class="row">
+                            <div class="col-xs-4 col-md-4" ng-repeat="friends in friends">
+                                <div class="thumbnail">
+                                    <a ng-href="{{ friends.friendName}}">
+                                        <img id="friendPicSize" src="images/{{friends.friendPic}}"></a>
+
+                                    <div class="caption">
+                                        <h3>
+                                            {{ friends.friendName}}
+                                        </h3>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="panel panel-default target">
-                <div class="panel-heading" contenteditable="false">Friends</div>
-                <div class="panel-body">
-                    <div class="row">
-                        <div class="col-xs-4 col-md-4" ng-repeat="friends in friends">
-                            <div class="thumbnail">
-                                <a ng-href="{{ friends.friendName}}">
-                                    <img id="friendPicSize" src="images/{{friends.friendPic}}"></a>
-
-                                <div class="caption">
-                                    <h3>
-                                        {{ friends.friendName}}
-                                    </h3>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
-    </div>
 
-    <div id="push"></div>
-</div>
-<script src="/plugins/bootstrap-pager.js"></script>
+        <div id="push"></div>
+    </div>
+    <script src="/plugins/bootstrap-pager.js"></script>
 </div>
