--- a/src/main/resources/public/app/views/profile.html
+++ b/src/main/resources/public/app/views/profile.html
@@ -15,10 +15,12 @@
                 <br>
             </div>
         </div>
-        <div class="row ">
+        <div class="row">
             <div class="pull-left col-xs-2 col-sm-2">
-                <button type="button" class="btn btn-dark btn-lg" ng-click="open()">Main</button>
-                <button type="button" class="btn btn-dark btn-lg" ng-click="open()">Info</button>
+                <ul class="nav nav-justified">
+                    <li class="active"><a href="" data-toggle="tabs">Main</a></li>
+                    <li><a href="" data-toggle="tabs">Info</a></li>
+                </ul>
             </div>
         </div>
         <br>
