Banner Change and Game logos
Updated the banner and made all the game pics a .png so it is
transparent.

--- a/src/main/resources/public/app/views/login.html
+++ b/src/main/resources/public/app/views/login.html
@@ -20,8 +20,11 @@
         </div>
     </div>
 </form>
-
-
+    <center>
+        <div
+                align=”center”><img src="images/FinalBanner.png" width="" height="" border="0">
+        </div>
+    </center>
 <header id="top" class="header">
     <div class="text-vertical-center">
         <h1>Welcome to Nexus!</h1>
