--- a/src/main/resources/public/app/views/profile.html
+++ b/src/main/resources/public/app/views/profile.html
@@ -3,10 +3,9 @@
         <div class="col-xs-10 col-sm-10">
             <h1 class="">{{ profile.userName }}</h1>
         </div>
-        <div class="col-xs-2 col-sm-2"><a href="" class="pull-right">
-            <img id="profilePicSize" title="profile image"
-                 class="img-square img-responsive"
-                 src="images/{{ profile.profilePic }}"></a>
+        <div class="col-xs-2 col-sm-2">
+            <a href="" class="pull-right">
+                <img id="profilePicSize" title="profile image" class="img-square img-responsive" src="images/{{ profile.profilePic }}"></a>
         </div>
         <div class="row">
             <div class="col-xs-6 col-sm-6">
@@ -28,29 +27,30 @@
         <div class="row">
             <div class="col-xs-3 col-sm-3">
                 <!--left col-->
-                <ul class="list-group">
-                    <li class="list-group-item text-muted" contenteditable="false">Profile</li>
-                    <li class="list-group-item text-right"><span class="pull-left"><strong
-                            class="">Joined</strong></span>
-                        {{ profile.join }}
-                    </li>
-                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">Last
+                <div ng-mouseover= "profileEdit = true" ng-mouseleave= "profileEdit = false">
+                    <ul class="list-group">
+                        <li class="list-group-item text-muted" contenteditable="false">Profile <span class="pull-right" ng-show = "profileEdit">Edit</span></li>
+                        <li class="list-group-item text-right"><span class="pull-left"><strong
+                            class="">Joined</strong></span> {{ profile.join }}
+                           
+                        </li>
+                        <li class="list-group-item text-right"><span class="pull-left"><strong class="">Last
                         seen</strong></span> {{ profile.lastSeen }}
-                    </li>
-                    <li class="list-group-item text-right"><span class="pull-left"><strong class="">Real
+                        </li>
+                        <li class="list-group-item text-right"><span class="pull-left"><strong class="">Real
                         name</strong></span> {{ profile.realName }}
-                    </li>
-                    <li class="list-group-item text-right"><span class="pull-left"><strong
-                            class="">Level: </strong></span>
-                        {{ profile.forumLvl }}
+                        </li>
+                        <li class="list-group-item text-right"><span class="pull-left"><strong
+                            class="">Level: </strong></span> {{ profile.forumLvl }}
 
-                    </li>
-                </ul>
-                <div class="panel panel-default">
-                    <div class="panel-heading">Current Games
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="panel panel-default" ng-mouseover= "currentGamesEdit = true" ng-mouseleave= "currentGamesEdit = false">
+                    <div class="panel-heading">Current Games<span class="pull-right" ng-show = "currentGamesEdit">Edit</span>
                     </div>
-                    <div class="panel-body" ng-repeat="currGame in gamePlay"><i style="color:green"
-                                                                                class="fa fa-check-square"></i>
+                    <div class="panel-body" ng-repeat="currGame in gamePlay"><i style="color:green" class="fa fa-check-square"></i>
                         <a href="{{currGame.gameLinks}}"> {{currGame.gameName}}</a>
 
                     </div>
@@ -66,8 +66,7 @@
                         profile.likes }}
                     </li-->
                     <li class="list-group-item text-right"><span class="pull-left"><strong
-                            class="">Posts</strong></span> {{
-                        profile.posts }}
+                            class="">Posts</strong></span> {{ profile.posts }}
                     </li>
                     <!--li class="list-group-item text-right"><span class="pull-left"><strong
                             class="">Followers</strong></span> {{ profile.followers }}
@@ -75,15 +74,19 @@
                 </ul>
                 <div class="panel panel-default">
                     <div class="panel-heading">Social Media</div>
-                    <div ng-repeat="website in links " class="panel-body"><a ng-href="{{website.socialLinks}}">
-                        <p>{{ website.websiteName }}</p></a></div>
+                    <div ng-repeat="website in links " class="panel-body">
+                        <a ng-href="{{website.socialLinks}}">
+                            <p>{{ website.websiteName }}</p>
+                        </a>
+                    </div>
                 </div>
             </div>
             <!--/col-3-->
             <div class="col-xs-9 col-sm-9" contenteditable="false" style="">
-                <div class="panel panel-default">
-                    <div class="panel-heading">About {{ profile.userName }}</div>
-                    <div class="panel-body"><p>{{ profile.description }}</p>
+                <div class="panel panel-default" ng-mouseover= "aboutEdit = true" ng-mouseleave= "aboutEdit = false">
+                    <div class="panel-heading">About {{ profile.userName }}<span class="pull-right" ng-show = "aboutEdit">Edit</span></div>
+                    <div class="panel-body">
+                        <p>{{ profile.description }}</p>
 
                     </div>
                 </div>
