--- a/src/main/resources/public/app/views/profile.html
+++ b/src/main/resources/public/app/views/profile.html
@@ -1,11 +1,15 @@
-<div class="container target" ng-controller="profileController" id="userProfile">
+<div class="container target" id="userProfile">
     <div class="row">
         <div class="col-xs-10 col-sm-10">
             <h1 class="">{{ profile.userName }}</h1>
         </div>
         <div class="col-xs-2 col-sm-2">
-            <a href="" class="pull-right">
-                <img id="profilePicSize" title="profile image" class="img-square img-responsive" src="images/{{ profile.profilePic }}"></a>
+            <div class="pull-right">
+                <div>
+                    <img id="profilePicSize" title="profile image" class="img-square img-responsive" src="images/{{ profile.profilePic }}">
+                   
+                </div>
+            </div>
         </div>
         <div class="row">
             <div class="col-xs-6 col-sm-6">
@@ -27,12 +31,12 @@
         <div class="row">
             <div class="col-xs-3 col-sm-3">
                 <!--left col-->
-                <div ng-mouseover= "profileEdit = true" ng-mouseleave= "profileEdit = false">
+                <div ng-mouseover="profileEdit = true" ng-mouseleave="profileEdit = false">
                     <ul class="list-group">
-                        <li class="list-group-item text-muted" contenteditable="false">Profile <span class="pull-right" ng-show = "profileEdit">Edit</span></li>
+                        <li class="list-group-item text-muted" contenteditable="false">Profile <a class="pull-right" ng-show="profileEdit" ng-click ="editProfile()">Edit</a></li>
                         <li class="list-group-item text-right"><span class="pull-left"><strong
                             class="">Joined</strong></span> {{ profile.join }}
-                           
+
                         </li>
                         <li class="list-group-item text-right"><span class="pull-left"><strong class="">Last
                         seen</strong></span> {{ profile.lastSeen }}
@@ -47,8 +51,8 @@
                     </ul>
                 </div>
 
-                <div class="panel panel-default" ng-mouseover= "currentGamesEdit = true" ng-mouseleave= "currentGamesEdit = false">
-                    <div class="panel-heading">Current Games<span class="pull-right" ng-show = "currentGamesEdit">Edit</span>
+                <div class="panel panel-default" ng-mouseover="currentGamesEdit = true" ng-mouseleave="currentGamesEdit = false">
+                    <div class="panel-heading">Current Games<span class="pull-right" ng-show="currentGamesEdit">Edit</span>
                     </div>
                     <div class="panel-body" ng-repeat="currGame in gamePlay"><i style="color:green" class="fa fa-check-square"></i>
                         <a href="{{currGame.gameLinks}}"> {{currGame.gameName}}</a>
@@ -83,8 +87,8 @@
             </div>
             <!--/col-3-->
             <div class="col-xs-9 col-sm-9" contenteditable="false" style="">
-                <div class="panel panel-default" ng-mouseover= "aboutEdit = true" ng-mouseleave= "aboutEdit = false">
-                    <div class="panel-heading">About {{ profile.userName }}<span class="pull-right" ng-show = "aboutEdit">Edit</span></div>
+                <div class="panel panel-default" ng-mouseover="aboutEdit = true" ng-mouseleave="aboutEdit = false">
+                    <div class="panel-heading">About {{ profile.userName }}<span class="pull-right" ng-show="aboutEdit">Edit</span></div>
                     <div class="panel-body">
                         <p>{{ profile.description }}</p>
 
