--- a/src/main/resources/public/app/views/editAbout.html
+++ b/src/main/resources/public/app/views/editAbout.html
@@ -2,7 +2,7 @@
 
     <div class="modal-body">
 
-        <form role="form" name = "myForm" ng-submit="editAbout(summary)" novalidate>
+        <form role="form" name = "myForm" novalidate>
             <link href="styles/styles.css" rel="stylesheet" type="text/css" />
             <h3 CLASS="text-primary" id="headTab">Add your summary!</h3>
             
@@ -30,7 +30,7 @@
     <div class="modal-footer">
         
             
-                        <button type="submit" class="btn btn-dark">Submit</button>
+                        <button type="button" ng-click="editAboutUser()" class="btn btn-dark">Submit</button>
                         <button type="button" class="btn btn-default" ng-click="close()">Close</button>
           
                         <p class="text-danger">{{error}}</p>
