--- a/src/main/resources/public/app/views/editProfile.html
+++ b/src/main/resources/public/app/views/editProfile.html
@@ -1,37 +1,36 @@
 <div class="modal-content">
 
-    <div class="modal-body">
+    <div class="modal-body addMargin">
 
         <form role="form" name = "myForm" ng-submit="realName(credentials)" novalidate>
             <link href="styles/styles.css" rel="stylesheet" type="text/css" />
             <h3 CLASS="text-primary" id="headTab">Change Profile Name!</h3>
             <br>
             <div class="div-padding">
-                <div class="form-group">
+               
 
-                    <div class="col-xs-4" id="centerStuff">
+                    <div class="col-xs-4" >
 
 
-                        <input type="text" id="username" name="username" ng-model="credentials.realName" class="form-control col-sm-2" placeholder="Real Name:">
+                        <input type="text" id="username" name="username" ng-model="newRealName" class="addMargin"  placeholder="Real Name:">
                         <br>
 
                
 
 
-            
-                        <button type="submit" class="btn btn-dark">Submit</button>
-                        <button type="button" class="btn btn-default" ng-click="close()">Close</button>
+
           
                         <p class="text-danger">{{error}}</p>
 
 
 
                     </div>
-                </div>
+              
             </div>
         </form>
     </div>
     <div class="modal-footer">
-        
+                              <button type="button" ng-click="editRealName()" class="btn btn-dark">Submit</button>
+                        <button type="button" class="btn btn-default" ng-click="close()">Close</button>
     </div>
 </div>
