vahans current changes

--- a/src/main/resources/public/app/views/login.html
+++ b/src/main/resources/public/app/views/login.html
@@ -1,4 +1,10 @@
 
+    <center>
+        <div
+                align=”center”><img src="images/FinalBanner.png" width="" height="" border="0">
+        </div>
+    </center>
+
 <header id="top" class="header">
     <div class="text-vertical-center">
         <h1>Welcome to Nexus!</h1>
@@ -7,6 +13,19 @@
         <!--a href="#services" class="btn btn-dark btn-lg">Find Out More</a-->
     </div>
 </header>
+
+<section id="news" class="news">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-lg-10 col-lg-offset-1">
+                <h2>News Feed</h2>
+                <hr class="small">
+                <div class="row">
+                <p>This is where news feed will go</p>
+                </div>
+            </div>
+        </div>
+    </div>
 
 <!-- Services -->
 <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
@@ -90,14 +109,96 @@
     </div>
 </aside>
 
-<section id="about" class="about">
+<!-- /Need to change services to About Us and also the class -->
+<section id="about" class="about bg-primary">
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2>Have you ever wonder?</h2>
-
-                <p class="lead">That its possible to have a social life and gaming all at the sametime!</p>
+        <div class="row text-center">
+            <div class="col-lg-10 col-lg-offset-1">
+                <h2>About Us</h2>
+                <hr class="small">
+                <div class="row">
+                    <div class="col-md-3 col-sm-6">
+                        <img class="img-portfolio img-responsive" src="images/Profile/vahan.jpg" width="150" height="25">
+                            <h4>
+                            <strong>Vahan Tokadjian</strong>
+                            </h4>
+                            <p>"Example example example example
+                            example example example example
+                            example example example example 
+                            example example example example
+                            example example example example
+                            example example example example" </p> 
+                    </div>
+                    
+                    
+                    <div class="col-md-3 col-sm-6">
+                    <img class="img-portfolio img-responsive" src="images/Profile/alexhall.jpg" width="130" height="">
+                            <h4>
+                            <strong>Alex</strong>
+                            </h4>
+                            <p>"Example example example example
+                            example example example example
+                            example example example example 
+                            example example example example
+                            example example example example
+                            example example example example" </p> 
+                    </div>
+                    
+                          
+                    <div class="col-md-3 col-sm-6">
+                     <img class="img-portfolio img-responsive" src="images/Profile/bendluzak.jpg" width="200" height="">
+                            <h4>
+                            <strong>Ben</strong>
+                            </h4>
+                            <p>"Example example example example
+                            example example example example
+                            example example example example 
+                            example example example example
+                            example example example example
+                            example example example example" </p>  
+                    </div>
+                    
+                    <div class="col-md-3 col-sm-6">
+                     <img class="img-portfolio img-responsive" src="images/Profile/philtran.jpg" width="120" height="25">
+                            <h4>
+                            <strong>Phil</strong>
+                            </h4>
+                           <p>"Example example example example
+                            example example example example
+                            example example example example 
+                            example example example example
+                            example example example example
+                            example example example example" </p> 
+                    </div>
+                    
+                     <div class="col-md-3 col-sm-6">
+                      <img class="img-portfolio img-responsive" src="images/Profile/davidKnopp.jpg" width="150"height="25">
+                            <h4>
+                            <strong>David</strong>
+                            </h4>
+                           <p>"Example example example example
+                            example example example example
+                            example example example example 
+                            example example example example
+                            example example example example
+                            example example example example" </p> 
+                    </div>
+                     <div class="col-md-3 col-sm-6">
+                        <img class="img-portfolio img-responsive" src="images/Profile/doodie.jpg" width="150" height="25">
+                            <h4>
+                            <strong>Raffi</strong>
+                            </h4>
+                            <p>"Example example example example
+                            example example example example
+                            example example example example 
+                            example example example example
+                            example example example example
+                            example example example example" </p>  
+                    </div>                       
+                </div>
+                <!-- /.row (nested) -->
             </div>
+            <!-- /.col-lg-10 -->
         </div>
         <!-- /.row -->
     </div>
@@ -115,14 +216,14 @@
                     <div class="col-md-6">
                         <div class="portfolio-item">
                             <!--a href="#"-->
-                                <img class="img-portfolio img-responsive" src="images/games/lol-logo.jpg">
+                                <img class="img-portfolio img-responsive" src="images/games/lol-logo.png">
                             </a>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="portfolio-item">
                             <!--a href="#"-->
-                                <img class="img-portfolio img-responsive" src="images/games/world-of-warcraft-logo.jpg">
+                                <img class="img-portfolio img-responsive" src="images/games/world-of-warcraft-logo.png">
                             </a>
                         </div>
                     </div>
