--- a/src/main/resources/public/app/views/profile.html
+++ b/src/main/resources/public/app/views/profile.html
@@ -3,10 +3,11 @@
         <div class="col-xs-10 col-sm-10">
             <h1 class="">{{ profile.userName }}</h1>
         </div>
-        <div class="col-xs-2 col-sm-2">
+        <div ng-mouseover="hoverProfilePic = true" ng-mouseleave="hoverProfilePic = false" class="col-xs-2 col-sm-2">
             <div class="pull-right">
-                <div>
-                    <img id="profilePicSize" title="profile image" class="img-square img-responsive" src="images/{{ profile.profilePic }}">
+                <div class="img-square img-responsive profile-pic">
+                    <img id="profilePicSize" title="profile image"  src="images/{{ profile.profilePic }}">
+                    <div ng-show="hoverProfilePic" class="edit"><a ng-click= "editProfilePic()">edit</a></div>
                    
                 </div>
             </div>
