--- a/src/main/resources/public/app/views/editProfilePic.html
+++ b/src/main/resources/public/app/views/editProfilePic.html
@@ -12,7 +12,7 @@
                     <div class="col-xs-4" >
 
 
-                        <input type="text" id="username" name="username" ng-model="newRealName" class="addMargin"  placeholder="Real Name:">
+                        <input type="text" id="username" name="username" ng-model="" class="addMargin"  placeholder="File Path">
                         <br>
 
                
