--- a/src/main/resources/public/app/views/league.html
+++ b/src/main/resources/public/app/views/league.html
@@ -1,3 +1,4 @@
+<ng-cloak>
 <div class="container-fluid">
     <div class="container">
         <h2>League of Legends</h2>
@@ -18,3 +19,4 @@
         </div>
     </div>
 </div>
+    </ng-cloak>
